--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>How to Start with dhtmlxGrid</title>         
-        <script type="text/javascript" src="./../codebase/grid.js"></script>
-        <link rel="stylesheet" href="./../codebase/grid.css">
+        <script type="text/javascript" src="./codebase/grid.js"></script>
+        <link rel="stylesheet" href="./codebase/grid.css">
     </head>
     <body>
         <div id="grid_container"></div>
